
	* UI/Common/UIxParentFolderActions.m (createFolderAction): Mantis 2040:
	return a 409 code when a folder with the same name exists.
	* SoObjects/SOGo/SOGoParentFolder.m (hasLocalSubFolderNamed): Added for
	Mantis 2040.
	* UI/Scheduler/UIxDatePicker.m: Fix to use user-defined format, if any.
	Mantis 1911.
	* UI/Scheduler/UIxDatePicker.m: Removed changes from 1911: too many issues.

2009-08-19  Cyril Robert <crobert@inverse.ca>

	* UI/MainUI/SOGoUserHomePage.m (defaultAction): Added support for SOGoUIxDefaultModule
	* UI/PreferencesUI/UIxPreferences.m: Added: availableModules,
	itemModuleText, userDefaultModule, setUserDefaultModule to support 
	SOGoUIxDefaultModule in the preferences UI.
	* UI/Contacts/UIxContactFoldersView.m (checkDefaultModulePreference): Added
	to support "Last" SOGoUIxDefaultModule value.
	* UI/MailerUI/UIxMailListView.m (checkDefaultModulePreference): Added to
	support "Last" SOGoUIxDefaultModule value.
	* UI/Scheduler/UIxCalMainView.m (checkDefaultModulePreference): Added to
	support "Last" SOGoUIxDefaultModule value.
	* UI/MailerUI/UIxMailListView.m (isMessageFlagged): Added for Mantis 1428
	* UI/MailerUI/UIxMailActions.m (markMessageFlaggedAction, 
	markMessageUnflaggedAction): Added to support flagging
	* UI/MailerUI/UIxMailListView.m: Renamed Invisible to Flagged
	* UI/MailerUI/UIxMailMainFrame.m: Renamed Invisible to Flagged

2009-08-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoObject.m (-parseETagList:): greatly
	simplified method by using the "trimmedComponents" utility method.

	* SoObjects/SOGo/SOGoContentObject.m (-PUTAction:): removed "new"
	hack. Sanitized var names.

2009-08-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoGCSFolder.m
	(-initializeQuickTablesAclsInContext:): don't give the right to
	view everything to users who can delete objects. This may cause
	deletion from working from a web method, but everyone who uses
	such as configuration will probably use DAV instead.
