@@ -24,6 +24,7 @@
 #import <Foundation/NSDictionary.h>
 #import <Foundation/NSString.h>
 #import <Foundation/NSKeyValueCoding.h>
+#import <Foundation/NSUserDefaults.h>
 
 #import <NGObjWeb/WOContext.h>
 
@@ -110,8 +111,14 @@ static NSArray *filters = nil;
 - (NSString *) selectedFilter
 {
   NSString *selectedFilter;
+  NSUserDefaults *ud;
 
   selectedFilter = [self queryParameterForKey: @"filterpopup"];
+  if (![selectedFilter length])
+    {
+      ud = [[context activeUser] userDefaults];
+      selectedFilter = [ud objectForKey: @"CalendarDefaultFilter"];
+    }
   if (![selectedFilter length])
     selectedFilter = @"view_today";
 
