@@ -7,6 +7,10 @@
 	* UI/Scheduler/UIxDatePicker.m: Fix to use user-defined format, if any.
 	Mantis 1911.
 	* UI/Scheduler/UIxDatePicker.m: Removed changes from 1911: too many issues.
+	* UI/Scheduler/UIxCalFilterPanel.m (selectedFilter): Added support for 
+	CalendarDefaultFilter user default. Mantis 112
+	* UI/Scheduler/UIxCalListingActions.m (checkFilterValue): Added to support
+	CalendarDefaultFilter user default. Mantis 112
 
 2009-08-19  Cyril Robert <crobert@inverse.ca>
 
